--- a/docs/css/onepage.css
+++ b/docs/css/onepage.css
@@ -50,6 +50,8 @@ body{
 #index .btn{
     font-size: 2em;
     border: 2px solid #ffffff;
+    background: transparent;
+    color: #fff;
     width: 2em;
     height: 2em;
     line-height: 2;
@@ -59,10 +61,10 @@ body{
     filter: drop-shadow(0px 6px 6px rgba(0,0,0,0.3));
     transition: all 0.5s ease-out;
 }
-#index .btn:active {
+#index .btn:focus {
     filter: drop-shadow(0px 12px 6px rgba(0,0,0,1));
 }
-#index .btn:active::before {
+#index .btn:not(:active)::before {
     outline: 0;
     color: #fff;
     width: 2em;
@@ -79,10 +81,14 @@ body{
     bottom: 0;
     left: 0;
     right: 0;
-    transform: scale(0.001,0.001);
+    transform: scale(0);
+    visibility: hidden;
+}
+#index .btn-ripple:before{
+    visibility: visible !important;
 }
 #device{
- background: linear-gradient(to bottom right, #603813, #BF9294); /* Standard syntax */
+ background: linear-gradient(to bottom right, #603813, #BF9294); /*Standard syntax */
  text-align: center;
 }
 #device .text-container{
@@ -123,17 +129,16 @@ body{
     margin-bottom: 30%;
 }
 @keyframes ripple{
-    50%{
-        transform: scale(1.5,1.5);
-        opacity: 0;
+    0%{
+        transform: scale(0);
     }
-    99%{
-        transform: scale(0.001, 0.001);
-        opacity: 0;
+    20%{
+        opacity: 0.3;
+        transform: scale(1);
     }
     100%{
-        transform: scale(0.001, 0.001);
-        opacity: 1;
+        opacity: 0;
+        transform: scale(1);
     }
 }
 .support{
@@ -164,9 +169,10 @@ body{
     bottom: 0;
     left: 0;
     right: 0;
-    transform: scale(0.001,0.001);   
+    transform: scale(0);
+    visibility: hidden;   
 }
-.support .btn:active::before, .support ul>li .sub-btn:active::before {
+.support .btn:not(:active)::before, .support ul>li .sub-btn:not(:active)::before {
     outline: 0;
     color: #fff;
     width: 2em;
@@ -175,6 +181,12 @@ body{
 }
 .support .btn:active, .support ul>li .sub-btn:active{
     box-shadow: 0px 12px 15px 1px rgba(0, 0, 0, 0.3), 0px 24px 26px 0px rgba(0,0,0,0.1);
+}
+/*.support .btn:hover::before, .support ul>li .sub-btn:hover::before{ 
+    visibility: visible;
+}*/
+.support .btn-ripple:before, .support ul>li .sub-btn-ripple:before{
+    visibility: visible !important;
 }
 .support ul{
     position: absolute;
@@ -191,13 +203,20 @@ body{
     opacity: 0;
     transition: all 300ms cubic-bezier(0.0, 0.0, 0.2, 1);
 }
-.support:hover ul{
+/*.support:hover ul{
     visibility: visible;
     /*opacity: 1;*/
-}
-.support:hover ul>li{    
+/*}*/
+/*.support:hover ul>li{    
     transform: scaleY(0.6) scaleX(0.6) translateY(0em) translateX(0em);
     opacity: 1;
+}*/
+.visible{
+    visibility: visible !important;
+}
+.liAnimation{
+    transform: scaleY(0.6) scaleX(0.6) translateY(0em) translateX(0em) !important;
+    opacity: 1 !important;
 }
 .support ul>li a, .support ul>li a:visited{
     color: #fff;
@@ -339,7 +358,7 @@ body{
         margin: 30%;
     }
 
-    .support{
+    /*.support{
         color: #fff;
         position: fixed;
         bottom: 1em;
@@ -353,5 +372,5 @@ body{
     }
     .support .btn:hover{
         box-shadow: 0px 12px 15px 1px rgba(0, 0, 0, 0.3), 0px 24px 26px 0px rgba(0,0,0,0.1);
-    }
+    }*/
 }
