--- a/docs/css/onepage.css
+++ b/docs/css/onepage.css
@@ -331,8 +331,13 @@ footer .f-copy::after{
     background-blend-mode: exclusion;
 }
 
-footer .f-copy p{
+footer .f-copy p, footer div.f-buttons p{
     text-align: center;
+}
+
+footer div.f-buttons{
+    width: 100%;    
+    padding: 10px 0 10px 0; 
 }
 
 @media screen and (min-width:1008px){
