--- a/docs/css/onepagemobile.css
+++ b/docs/css/onepagemobile.css
@@ -14,30 +14,70 @@ nav {
     width: 100%;
     color: #fff;
     font-family: "Lato", sans-serif;
-    font-size: 15px;
+    font-size: 25px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    height: 150px;
+    height: 70px;
+    background: linear-gradient(to right, #642b73, #c6426e);
+    z-index: 5;
 }
 
 nav .brand {
-    font-weight: 400;
+    font-weight: 700;
 }
 
 nav ul {
     list-style-type: none;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    width: 50%;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    position: fixed;
+    top: 70px;
+    z-index: 5;
+    background: linear-gradient(to right, #642b73, #c6426e);
+    height: 200px;
+    transform: translateY(-270px);
+    transition: transform 200ms ease-out;
+}
+
+nav ul li{
+    opacity: 0;
+    transition: opacity 250ms ease-out;
 }
 
 nav ul li a {
-    text-decoration: underline;
+    text-decoration: none;
     color: #ffffff;
     padding: 15px;
+}
+
+nav ul li a:hover, .burger:hover {
+    background: rgba(0, 0, 0, 0.3);
+    transition: 240ms ease-out;
+}
+
+.burger .line{
+    height: 2px;
+    width: 25px;
+    margin: 5px;
+    background-color: rgb(231, 231, 231);
+}
+
+.burger{
+    display: block;
+    padding: 15px;
+}
+
+.burger-toggle{
+    transform: translateY(0);
+}
+
+.burger-toggle li{
+    opacity: 1;
 }
 
 section {
@@ -70,6 +110,10 @@ section .desc {
     text-align: justify;
 }
 
+#index .btn-container{
+    padding: 15px;
+}
+
 #index .btn {
     font-size: 32px;
     border: 2px solid #ffffff;
@@ -84,6 +128,7 @@ section .desc {
     text-shadow: none;
     filter: drop-shadow(0px 6px 6px rgba(0, 0, 0, 0.3));
     transition: all 0.5s ease-out;
+    display: block;
 }
 
 #index .btn:focus {
@@ -121,7 +166,7 @@ section .desc {
 }
 
 #browser {
-    background: linear-gradient(to bottom right, #73C8A9, #373B44);
+    background: linear-gradient(to bottom left, #73C8A9, #373B44);
 }
 
 #platform {
@@ -148,6 +193,7 @@ footer .f-container {
 
 footer .f-section {
     width: 100%;
+    padding: 15px;
 }
 
 footer .f-list {
